# TuranLibraries

./: .clang-format  .gitignore  CMakeLists.txt  Main.cpp  README.md  VulkanRenderer.sln  VulkanRenderer.vcxproj  VulkanRenderer.vcxproj.filters  errors.txt  imgui.ini  logs.txt  notcodedpaths.txt  warnings.txt
Content/: ComputeCompiler.bat  FirstCompute.spv  FirstComputeShader.comp  FirstFrag.spv  FirstShader.frag  FirstShader.vert  FirstShaderCompiler.bat  FirstVert.spv  SkyBoxCompiler.bat  SkyBoxFrag.frag  SkyBoxFrag.spv  SkyBoxVert.spv  SkyBoxVert.vert
Example/: CMakeLists.txt  ECS_Inheritance.cpp  FirstCompute.spv  FirstComputeShader.comp  FirstFrag.spv  FirstShader.frag  FirstShader.vert  FirstVert.spv  camera.h  cube_rendering.cpp  loading_libraries.h  loading_shaders.h  main.cpp  registry_sys_example.cpp
Source/: Main.cpp  Main.h
Source/Editor/: Editor_DataManager.h  Editor_System.cpp
Source/Editor/Editors/: Main_Window.cpp  Main_Window.h
Source/Editor/FileSystem/: EditorFileSystem_Core.cpp
Source/Editor/FileSystem/ResourceImporters/: MaterialInstance_Import.cpp  Model_Loader.cpp  ShaderSource_Creater.cpp  ShaderSource_Creater.h  Texture_Loader.cpp  Texture_Loader.h
Source/Editor/FileSystem/ResourceTypes/: Model_Resource.cpp  Model_Resource.h  ResourceTYPEs.h
Source/Editor/RenderContext/: Editor_DataManager.cpp
Source/GFX/: GFX_Core.cpp  GFX_Core.h  GFX_Display.cpp  GFX_Display.h  GFX_ENUMs.cpp  GFX_ENUMs.h  GFX_Includes.cpp  GFX_Includes.h
Source/GFX/GFX_FileSystem/Resource_Type/: Material_Type_Resource.cpp  Material_Type_Resource.h  Texture_Resource.cpp  Texture_Resource.h
Source/GFX/IMGUI/: IMGUI_Core.cpp  IMGUI_Core.h  IMGUI_WINDOW.cpp  IMGUI_WINDOW.h
Source/GFX/Renderer/: GFX_RenderCommands.h  GFX_RenderNodes.cpp  GFX_RenderNodes.h  GFX_Renderer.cpp  GFX_Renderer.h  GFX_Resource.cpp  GFX_Resource.h  GPU_ContentManager.cpp  GPU_ContentManager.h  README.md  Resources_README.md
Source/TuranAPI/: API_includes.h  FileSystem_Core.cpp  Logger_Core.cpp  Logger_Core.h  Profiler_Core.cpp  Profiler_Core.h  ThreadedJobCore.cpp  ThreadedJobCore.h
Source/Vulkan/VulkanSource/: Vulkan_Core.cpp  Vulkan_Core.h  Vulkan_Display.h  Vulkan_Includes.cpp  Vulkan_Includes.h
TAPI/: CMakeLists.txt  TAPI.md
TAPI/TAPI/: API_includes.cpp  API_includes.h  Bitset.cpp  FileSystem_Core.cpp  FileSystem_Core.h  Logger_Core.cpp  Logger_Core.h  TURANAPI.h  ThreadedJobCore.cpp  ThreadedJobCore.h
TGFXCORE/: CMakeLists.txt  RenderGraph_README.md  Resources_README.md  TGFX.md
TGFXCORE/TGFX/: GFX_Core.cpp  GFX_Core.h  GFX_Helper.h  GFX_Includes.h  GFX_Renderer.h  GPU_ContentManager.h  IMGUI_Core.h  PREPROCESSORs.inl
TGFXVulkan/: CMakeLists.txt  Main.h  RGAlgorithm_Dynamic.cpp  RGAlgorithm_TempDatas.cpp  VKIMGUI_README.md  VK_GPUContentManager.cpp  VK_GPUContentManager.h  Vulkan_Core.cpp  Vulkan_Includes.cpp  Vulkan_Includes.h  Vulkan_Renderer_Core.cpp
editor/: CMakeLists.txt  main.cpp  main.h
editor/UI/: CMakeLists.txt  editor_ui.cpp  editor_ui.h
editor/gameLinker/: CMakeLists.txt  gameLinker.cpp  gameLinker.h
editor/pecfManager/: load_systems.cpp  pecfManager.cpp  pecfManager.h
editor/scene/: CMakeLists.txt  gizmo.h  scene.cpp  scene.h
shaders/: firstComputeShader.comp  firstShader.frag  firstShader.vert
tgfx/: CMakeLists.txt  RenderGraph_README.md  Resources_README.md
tgfx/core/: tgfx_core.cpp  tgfx_core.h  tgfx_forwarddeclarations.h  tgfx_gpucontentmanager.h  tgfx_helper.h  tgfx_imgui.h  tgfx_renderer.h  tgfx_structs.h
tgfx/dx12/: CMakeLists.txt  core.cpp  core.h  includes.h  predefinitions_dx.cpp  predefinitions_dx.h  synchronization_sys.cpp  synchronization_sys.h
tgfx/rendergraph/: CMakeLists.txt  RG.h  RG_Commander.cpp  RG_Description.cpp  RG_Primitive.cpp  main.cpp  tgfx_rendergraph_constructor.h  tgfx_rendergraph_forwarddeclarations.h
tgfx/vk/: CMakeLists.txt  CommandBufferRecording.cpp  IMGUI_VK.cpp  IMGUI_VK.h  RGAlgorithm_Dynamic.cpp  RGAlgorithm_Main.cpp  RGAlgorithm_Static.cpp  RGAlgorithm_TempDatas.cpp  RGAlgorithm_TempDatas.h  VK_GPUContentManager.cpp  Vulkan_Core.cpp  Vulkan_Core.h  Vulkan_Includes.cpp  Vulkan_Includes.h  Vulkan_Renderer_Core.cpp  Vulkan_Renderer_Core.h  Vulkan_Resource.cpp  Vulkan_Resource.h  core.cpp  core.h  gpucontentmanager.cpp  gpucontentmanager.h  imgui_impl_glfw.h  imgui_stdlib.cpp  includes.h  predefinitions_vk.cpp  predefinitions_vk.h  renderer.cpp  renderer.h
tgfx/vk_backend/: CMakeLists.txt  RG.h  RG_Commander.cpp  RG_Description.cpp  RG_Primitive.cpp  core.cpp  core.h  extension.cpp  extension.h  gpucontentmanager.cpp  gpucontentmanager.h  helper.cpp  helper.h  imgui.cpp  imgui.h  imgui_vktgfx.cpp  imgui_vktgfx.h  includes.h  memory.cpp  memory.h  predefinitions_vk.cpp  predefinitions_vk.h  queue.cpp  queue.h  renderer.cpp  renderer.h  rendergraph.h  rendergraph_dynamic.cpp  rendergraph_main.cpp  rendergraph_primitive.cpp  rendergraph_static.cpp  resource.h  synchronization_sys.cpp  synchronization_sys.h  vk_contentmanager.cpp  vk_contentmanager.h  vk_core.cpp  vk_core.h  vk_extension.cpp  vk_extension.h  (+27 more)
tgfx/vulkan/: CMakeLists.txt  CommandBufferRecording.cpp  IMGUI_VK.cpp  Main.cpp  RGAlgorithm_Main.cpp  RGAlgorithm_Static.cpp  RGAlgorithm_TempDatas.h  Vulkan_Core.cpp  Vulkan_Core.h  Vulkan_Includes.h  Vulkan_Renderer_Core.h  Vulkan_Resource.cpp  Vulkan_Resource.h
turanapi/: CMakeLists.txt
turanapi/turanapi/: Bitset.h  Profiler_Core.cpp  Profiler_Core.h  TURANAPI.h  allocator_tapi.cpp  allocator_tapi.h  array_of_strings_tapi.c  array_of_strings_tapi.cpp  array_of_strings_tapi.h  bitset_tapi.cpp  bitset_tapi.h  ecs_tapi.cpp  ecs_tapi.h  eop_allocator_tapi.h  filesys_tapi.cpp  filesys_tapi.h  logger_tapi.cpp  logger_tapi.h  predefinitions_tapi.h  profiler_tapi.cpp  profiler_tapi.h  registrysys_tapi.c  registrysys_tapi.h  standard_allocator_tapi.h  string_tapi.cpp  string_tapi.h  threadedjobsys_tapi copy.cpp  threadingsys_tapi.cpp  threadingsys_tapi.h  unittestsys_tapi.c  unittestsys_tapi.cpp  unittestsys_tapi.h  virtualmemorysys_tapi.c  virtualmemorysys_tapi.h
(+17 files in other folders)
