cmake_minimum_required (VERSION 3.8)

file(GLOB_RECURSE TGFXFiles "TGFX/*.cpp" "TGFX/*.h")
add_library(TGFXCORE STATIC ${TGFXFiles})
include_directories(${CMAKE_SOURCE_DIR}/TAPI)
set_target_properties(TGFXCORE PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})
set_target_properties(TGFXCORE PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})

install(TARGETS TGFXCORE LIBRARY DESTINATION bin)