cmake_minimum_required (VERSION 3.8)

file(GLOB_RECURSE VKbackendfiles "*.cpp" "*.h" "*.c")
add_library(TGFXVulkan SHARED ${VKbackendfiles})
target_include_directories(TGFXVulkan PRIVATE ${CMAKE_SOURCE_DIR}/turanapi/turanapi ${CMAKE_SOURCE_DIR}/tgfx/core)
set_target_properties(TGFXVulkan PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
set_target_properties(TGFXVulkan PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release PREFIX "")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DVULKAN_DEBUGGING")

find_package(glfw3 CONFIG REQUIRED)
if(GLFW_FOUND OR glfw3_FOUND)
    target_include_directories(TGFXVulkan PRIVATE ${GLFW_INCLUDE_DIRS})
    target_link_libraries(TGFXVulkan PRIVATE glfw)
else()
    message ("GLFW isn't found, please be sure to include and link GLFW3 to the project!")
endif()


find_package(glm REQUIRED)
target_include_directories(TGFXVulkan PRIVATE ${glm_INCLUDE_DIRS})
target_link_libraries(TGFXVulkan PRIVATE glm::glm)

find_package(Vulkan REQUIRED)
if(VULKAN_FOUND)
    target_include_directories(TGFXVulkan PRIVATE ${Vulkan_INCLUDE_DIRS})
    message(${Vulkan_INCLUDE_DIRS})
    target_link_libraries(TGFXVulkan PRIVATE Vulkan::Vulkan)
else()
    message("Vulkan isn't found, please be sure to install Vulkan SDK then include and link Vulkan to the project!")
endif()

find_package(imgui CONFIG)
if(imgui_FOUND)
    target_link_libraries(TGFXVulkan PRIVATE imgui::imgui)
else()
    message("dear Imgui (by Ocornut) isn't installed on your system!")
    target_compile_definitions(NO_IMGUI)
endif()
